Finish first draft of the thesis

--- a/thesis.tex
+++ b/thesis.tex
@@ -201,13 +201,13 @@
 %% Set up figure environment
 %%
 \newenvironment{figpage}{
-  % \clearpage
+  \clearpage
   \SetSinglespace{1.2}
   \addtocounter{page}{-1}
   \thispagestyle{empty}
     }{
   \SetSinglespace{1.4}
-  % \clearpage
+  \clearpage
 }
 
 %%
