Fix quotation marks and accept Milot's changes

--- a/thesis.tex
+++ b/thesis.tex
@@ -37,6 +37,9 @@
 \usepackage[table,xcdraw]{xcolor}
 % \setmainfont{cm}
 
+%\usepackage{environ}
+%\RenewEnviron{figure}{}
+
 \parskip=16pt
 % \spaceskip=0.5em
 
